force-app/main/default/objects/Contact/fields/Opt_Out_of_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-Out of Email</label>
    <type>Checkbox</type>
</CustomField>